[gd_scene load_steps=11 format=2]

[ext_resource path="res://GUI/Themes/MenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Font/Hack/HackHeader.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/Hack/HackSmallHeader.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/MainMenu/Credits.gd" type="Script" id=4]
[ext_resource path="res://Font/NotoSans/NotoSansBoldItalic.tres" type="DynamicFont" id=5]
[ext_resource path="res://Font/NotoSans/NotoSansItalic.tres" type="DynamicFont" id=6]
[ext_resource path="res://Font/NotoSans/NotoSansNormal.tres" type="DynamicFont" id=7]
[ext_resource path="res://Font/NotoSans/NotoSansBold.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00392157, 0, 0.2, 0.431373 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0117647, 0, 0.145098, 1 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
rich_label_path = NodePath("CenterContainer/Panel/VBoxContainer/HBoxContainer/RichTextLabel")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 279.0
margin_top = 100.0
margin_right = 999.0
margin_bottom = 620.0
rect_min_size = Vector2( 720, 520 )
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 680.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Credits"
align = 1

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 37.0
margin_right = 680.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 49.0
margin_right = 680.0
margin_bottom = 432.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 383.0
rect_min_size = Vector2( 128, 0 )

[node name="CreditsButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Credits"

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 128.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "Licenses"
align = 1

[node name="Apache20Button" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 128.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 32 )
text = "Apache 2.0"

[node name="HackButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 128.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 32 )
text = "Hack"

[node name="MITButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 128.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 32 )
text = "MIT"

[node name="OFL11Button" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 128.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 32 )
text = "OFL 1.1"

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 148.0
margin_bottom = 383.0
rect_min_size = Vector2( 16, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 680.0
margin_bottom = 383.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 8 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
selection_enabled = true

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 436.0
margin_right = 680.0
margin_bottom = 444.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 448.0
margin_right = 680.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 32 )

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 288.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 292.0
margin_right = 388.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
text = "Back"

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 392.0
margin_right = 680.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Apache20Button" to="." method="_on_Apache20Button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HackButton" to="." method="_on_HackButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/MITButton" to="." method="_on_MITButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/OFL11Button" to="." method="_on_OFL11Button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
